--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,68 +1,47 @@
 name: Build and deploy to GitHub Pages
-
 on:
   push:
     branches: ["main"]
-
   workflow_dispatch:
-
 permissions:
   contents: read
   pages: write
   id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           lfs: "true"
-
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: webp
-
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: "yarn"
-
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
           cache: 'pip'
-
       - name: Setup Pages
-        uses: actions/configure-pages@v3
-
+        uses: actions/configure-pages@v4
       - name: Install Python dependencies
         run: pip install -r requirements.txt
-
       - name: Install yarn dependencies
         run: yarn install
-
       - name: Build
         run: yarn build
-
-#      - name: Upload artifact
-#        uses: actions/upload-pages-artifact@v4
-#        with:
-#          path: ./dist
-
-      - uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: Upload artifact
           path: ./dist
-
   deploy:
     environment:
       name: github-pages
@@ -72,4 +51,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v3
