--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,54 +1,60 @@
-name: Build and deploy to GitHub Pages
+name: Build and deploy to Cloudflare Pages
+
 on:
   push:
     branches: ["main"]
+
   workflow_dispatch:
+
 permissions:
   contents: read
-  pages: write
-  id-token: write
+  deployments: write
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           lfs: "true"
+
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: webp
-      - name: Setup Node
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+          run_install: false
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
-          cache: "yarn"
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-          cache: 'pip'
+          node-version: 22
+          cache: 'pnpm'
+      - run: pnpm install
+
       - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt
-      - name: Install yarn dependencies
-        run: yarn install
+        uses: actions/configure-pages@v3
+
       - name: Build
-        run: yarn build
+        run: pnpm build
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./dist
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
