--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and deploy to Cloudflare Pages
+name: Build and deploy to GitHub Pages
 
 on:
   push:
@@ -8,8 +8,11 @@ on:
 
 permissions:
   contents: read
-  deployments: write
+  pages: write
+  id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -27,34 +30,41 @@ jobs:
         with:
           packages: webp
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: "Set up Python"
-        uses: actions/setup-python@v5
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          python-version-file: "pyproject.toml"
+          node-version: "22"
+          cache: "yarn"
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - uses: actions/setup-python@v5
         with:
-          version: 9
-          run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'pnpm'
-      - run: pnpm install
+          python-version: '3.12'
+          cache: 'pip'
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
+
+      - name: Install yarn dependencies
+        run: yarn install
+
       - name: Build
-        run: pnpm build
+        run: yarn build
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
